<resources>
    <string name="login">Entra</string>
    <string name="flag">Bandiera</string>
    <string name="comune">Comune</string>
    <string name="lastUpdate">Data</string>
    <string name="price">Prezzo</string>
    <string name="enter_in_your_account">Accedi al tuo account</string>
    <string name="create_your_account">Crea il tuo profilo</string>
    <string name="signup">Registrati</string>
    <string name="forgot_password">Password Dimenticata?</string>
    <string name="log_form_username">Username</string>
    <string name="log_form_email">Email</string>
    <string name="log_form_name">Nome</string>
    <string name="log_form_last_name">Cognome</string>
    <string name="log_form_password">Password</string>
    <string name="logged_username"></string>
    <string name="MAPBOX_ACCESS_TOKEN_DEFAULT">pk.eyJ1IjoiZGllZ29jaXBhIiwiYSI6ImNrNXozOGRrOTA1eGczZ3FqazR2amthb2UifQ.Kyzu-TDi7MYZPhBe4s_WqA</string>
    <string name="user_location_permission_explanation">Questo App ha bisogno dei Permessi di Localizzazione per funzionare correttamente</string>
    <string name="user_location_permission_not_granted">Permessi di localizzazione non abilitati.</string>
    <string name="app_name">Gas Advisor</string>
    <string name="appName">Gas Advisor</string>
    <string name="viaggio">Viaggio</string>
    <string name="cerca">Cerca</string>
    <string name="mappa">Mappa</string>
    <string name="profilo">Profilo</string>
    <string name="preferiti">Preferiti</string>
    <string name="greetings"></string>
    <string name="txtPrezzoMedio">Il prezzo medio della benzina e` di:</string>
    <string name="txtValuePrice">1,47</string>
    <string name="txtValuePriceChange">(+0,09)</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="naviga">Inizia Navigazione</string>
    <string name="img_description_backgroud">imagine_sfondo</string>
    <string name="profile">Profilo</string>
    <string name="carburantePref">Carburante Preferito</string>
    <string name="settings">Impostazioni</string>
    <string name="logout">Uscita</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="reset_password">Ripristina Password</string>
    <string name="avvia">Avvia</string>

</resources>
