<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/signup" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                android:id="@+id/et_name_layoutRegister"
                style="@style/modifiedEditText"
                android:hint="@string/log_form_name"
                android:inputType="text"
                android:maxLines="1"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/et_lastName_layoutRegister"
                android:hint="@string/log_form_last_name"
                android:inputType="text"
                android:maxLines="1"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/et_email_layoutRegister"
                android:hint="@string/log_form_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/et_userName_layoutRegister"
                android:hint="@string/log_form_username"
                android:inputType="text"
                android:maxLines="1"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/signup_text_margin_top">

            <EditText
                style="@style/modifiedEditText"
                android:id="@+id/et_password_layoutRegister"
                android:hint="@string/log_form_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:importantForAutofill="no" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/loginButton"
            android:layout_gravity="center"
            android:text="@string/signup" />

        <TextView
            android:id="@+id/tv_login_layoutRegister"
            style="@style/parent"
            android:clickable="true"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold"
            android:focusable="true" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
