<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark">

        <com.google.android.material.checkbox.MaterialCheckBox
            style="?android:starStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:clickable="false" />

        <TextView
            android:text="@string/flag"
            android:id="@+id/tv_Bandiera_FragmentCheapest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:text="@string/comune"
            android:id="@+id/tv_Comune_FragmentCheapest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:text="@string/lastUpdate"
            android:id="@+id/tv_Data_FragmentCheapest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor" />

        <TextView
            android:text="@string/price"
            android:id="@+id/tv_Prezzo_FragmentCheapest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/lv_distributori_FragmentCheapest"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>